80 percent done with the Childcare page. The page is formatted correctly when full screen, and displays the correct line spacing, colors, and text decoration in the correct placements. Next step is to work on the wrapping of the text and pictures when the browser is smaller.

--- a/website.css
+++ b/website.css
@@ -8,7 +8,7 @@ body{
 }
 p, aside, h1, h2, h3, div, section, address{
     padding: 0px 48px;
-        max-width: 1280px;
+    max-width: 1280px;
 }
 header{
     background-image: url('imgs/HeartofKYWebLogo.jpg');
@@ -19,6 +19,7 @@ header{
     justify-content: center;
     align-items:center;
     align-self: stretch;
+    box-shadow: inset 1600px 1600px rgba(24, 22, 22, 0.6)
     
 }
 .logo{
@@ -54,7 +55,7 @@ nav{
     padding: 0px 75px;
     display: block;
 }
-ul{
+nav ul{
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -203,4 +204,62 @@ img[alt="Instagram"]{
 }
 #concerns a[href="concerns.html"]{
     font-weight: bold;
+}
+/* childcare */
+#childcare{
+    line-height: 1.5;
+}
+#childcare .social{
+    display: none;
+}
+#whyChildcare img{
+    display: none;
+}
+main>div{
+    display: flex;
+    flex-direction: column;
+}
+#whyChildcare{
+    order: 2;
+    text-align: left;
+    padding-left: -1.25%;
+}
+
+#choseChildcare{
+    display:flex;
+    flex-direction: row;
+}
+#childcareBenefits{
+    display: flex;
+    flex-direction: row;
+}
+#childcare div img{
+    height: 198.14px;
+    width: 330.25px;
+}
+.links a{
+    color: rgba(0, 114, 153, 1);
+}
+#childcare h2{
+    font-size: 20pt;
+}
+#childcare p{
+    font-size: 14pt;
+    font-family:'PT Sans';
+    font-weight: 400;
+}
+#childcare .links > ul{
+    font-size: 14pt;
+    font-family:'PT Sans';
+    font-weight: 400;
+    list-style-type: none;
+    text-align: left;
+    margin: 0px;
+    padding-left: 30px;
+}
+#whyChildcare div p{
+    margin-bottom: 0px;
+}
+#poviders{
+    padding: 0px;
 }
